--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorSkyBlue">#8BD3E4</color>
+    <color name="colorSkyGreen">#6FC5AF</color>
+
+    <color name="colorBabyFaceBlue">#8BD3E4</color>
+    <color name="colorBabyFaceContainerBlue">#B9E5EF</color>
+    <color name="colorBabyFaceBorderBlue">#8BD3E4</color>
 </resources>
